clear compositor_host_pending_renderer_state when IPC failed

BUG=693326

Review-Url: https://codereview.chromium.org/2700823003
Cr-Commit-Position: refs/heads/master@{#451322}

Former-commit-id: a1dd1893c4d1a6c65b97d945f652ccebea80b232